--- a/大型金属焊接接口缺陷检测系统.md
+++ b/大型金属焊接接口缺陷检测系统.md
@@ -5,15 +5,31 @@
 - [x] 缺陷检测算法 
   - [ ] 基本已经搞定了，后面有时间再优化（weight0）
 
-- [ ]  usb验证算法
+- [ ] usb验证算法
+
+  > 先跳过
+
 - [ ] qt界面
-  - [ ] 大widget套小widget，小的切换大的不动
-  - [ ] 各元素样式
+  - [x] 大widget套小widget，小的切换大的不动
+
+    > 弃用
+
+  - [x] 组件布局（看sptr找灵感）
+
+  - [ ] 各元素样式（浏览各组件功能，选用）
+
   - [ ] 按钮连接
+
+    - [ ] 点击按钮切换界面样式（开始、暂停|结束）
     - [ ] 打开/存储文件
 
-  - [ ] 数据库连接、存储
-  - [ ] 显示word文档
+  - [ ] 提示框
+
+  - [ ] 数据库连接、存储（检测条目信息（批次/逐条））
+
+  - [ ] ui界面操作从数据库导出excel
+
+  - [ ] 显示word文档（技术支持）
 
 - [ ] 多线程（授权检测要一直开）
 
